# kirundi-lemmatize-search

./: README.md  __init__.py  pyproject.toml  requirements.txt
i18n/: base.pot
i18n/de/LC_MESSAGES/: messages.mo  messages.po
i18n/en_UK/LC_MESSAGES/: messages.mo  messages.po
i18n/fr/LC_MESSAGES/: messages.mo  messages.po
i18n/rn/LC_MESSAGES/: messages.mo  messages.po
lemmatize_search/: __init__.py  ingenzura_ikirundi.ui  ingenzura_main.py  kir_db_classes.py  kir_helper2.py  kir_prepare_verbs.py  kir_start_input_console.py  kir_string_depot.py  kir_tag_classes.py  kir_tag_search.py  test_classes_db.py  test_verbs.py
py/: kir_analyse_input_console.py  kir_db_classes.py  kir_helper2.py  kir_prepare_verbs.py  kir_string_depot.py  kir_tag_classes.py  kir_tag_search.py  test_db_classes.py  test_nouns_adjs.py  test_verbs.py
resources/: dates.txt  db_cox.csv  extern.csv  help_de.html  help_dePoS.html  help_en.html  help_enPoS.html
ressources/: db_kirundi_mocking.csv  extern.csv  freqfett_mocking.csv
tests/: fl__text_test.csv  tag__test_text.json  test_classes_db.py  test_classes_tag.py  test_helper.py  test_lemmata.csv  test_tag_search.py  test_verbs.py  text_test.txt
tests/features/: lemmatize and search.feature
tests/test_data/: names_test.csv  tag__test_text0.csv  tag__test_text1.csv  tag__wrong1.csv  tag__wrong2.csv  tag__wrong3.csv  text1.txt
