[tool.poetry]
name = "lemmatize-search"
version = "0.1.0"
description = "Rundi texts will be mapped to lemmata, to search them by combinations of lemmata and Part-of-Speech-tag"
authors = ["Doreen Nixdorf <code.nixdorf@posteo.de>"]
license = "CC BY-NC-SA 4.0 (Attribution, NonCommercial, ShareAlike)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Unidecode = "^1.3.7"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
nose3 = "^1.3.8"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
